<resources>
    <string name="app_name">Galvanize Café</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_cart">Order</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_cart">Your Order</string>
    <string name="title_activity_about">About Us</string>
    <string name="title_activity_check_credit">Check Credits</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_item_detail">ItemDetailActivity</string>
    <string name="add_to_cart">Add to Order</string>
    <string name="sample_description">Matcha, a traditional Japanese tea, has many health benefits. It also provides an enjoyable drinking experience. Whether you like the traditional whisked matcha, or matcha blended into a flurry of ice and milk, it is a flavorful beverage choice.</string>
    <string name="empty_cart">Total No. of Items in Order: 0</string>
    <string name="checkout_items">Pay and Checkout</string>
    <string name="empty_payable">Total Payable: SGD $0.00</string>

    <string name="social_share_text">Get 20% discount off your total bill when you check in using MyGalvanise mobile app! More info about our cafe can be found at http://galvanize.space/</string>
    <string name="title_activity_scan_qrcode">ScanQRCodeActivity</string>
    <string name="scan_qr_code">Scan Table Number (QR Code)</string>
    <string name="title_activity_pre_pay_pal">PrePayPalActivity</string>
    <string name="update">Update</string>
    <string name="title_activity_successful_payment">SuccessfulPaymentActivity</string>
    <string name="payment_successful">Payment Successful</string>
    <string name="thank_upon_payment">Thank you for making payment. \n We will bring your food to your table.</string>
    <string name="receipt_sms">A Receipt SMS has been sent to your phone</string>
    <string name="return_to_menu">Back to Menu</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_qr_instructions">QrInstructionsActivity</string>
    <string name="title_activity_chat">Chat With A Staff</string>
    <string name="title_activity_booking">Book A Seat</string>
    <string name="chat_user">You:</string>
    <string name="action_new_board">New board</string>
    <string name="custom_latte">  Add Custom Latte Art</string>
    <string name="done_with_custom_art">Done with Custom Art</string>
    <string name="add_custom_to_cart">Add Custom Latte To Order</string>
    <string name="loading_drawing_board">Loading\nDrawing Board</string>
    <string name="click_to_edit">Click to edit drawing</string>
    <string name="your_latte_art">Your Latte Art</string>
    <string name="customizable">Customizable</string>
    <string name="sample_price_label">Sample Price Label</string>
    <string name="problem_fetch_data">Couldn\'t Fetch Menu Data</string>
    <string name="check_internet">Please check your Internet connection.</string>
    <string name="try_again">Try Again</string>
    <string name="borrow_charger">Your phone needs to be recharged, just like how we need caffeine to recharge ourselves. Head over to our counter and borrow a charger from our staff! :)</string>
    <string name="ok_got_it">OKAY, GOT IT!</string>


    <string-array name="tabs">
        <item>ALL</item>
        <item>COFFEE</item>
        <item>TEA</item>
        <item>JUICES</item>
        <item>SNACKS</item>
        <item>DESSERTS</item>
        <item>HALLOWEEN</item>
        <item>CREDITS</item>
    </string-array>

</resources>
