<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <include
            android:id="@+id/app_bar"
            layout="@layout/app_bar" />

        <!-- Progress Bar For Showing The Loading Of JSON Data !-->
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:indeterminate="true"
            android:indeterminateBehavior="repeat"
            android:indeterminateOnly="true" />

        <!-- Display Placeholder Image And A "TRY AGAIN" Button When JSON Data Cannot Be Loaded !-->
        <LinearLayout
            android:id="@+id/feedNotAvailable"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:text="@string/problem_fetch_data"
                android:gravity="center"
                android:textSize="24dp"
                android:paddingTop="50dp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/check_internet"
                android:gravity="center"
                android:textSize="16dp"
                android:paddingTop="10dp"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- Sidebar with Hamburger Menu !-->
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/try_again"
                android:background="@color/primaryColor"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:id="@+id/try_reconnect"
                android:onClick="onClick_reconnect"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@drawable/ic_anxious_cup" />

        </LinearLayout>

        <!-- Tabs For Various Categories Of The Food Menu !-->
        <com.example.zee.galvanisemobile.tabs.SlidingTabLayout
            android:id="@+id/tabs"
            android:background="@color/primaryColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- ViewPager For Tabs !-->
        <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

    <!-- Sidebar with Hamburger Menu !-->
    <fragment
        android:id="@+id/fragment_navigation_drawer"
        android:layout_width="@dimen/nav_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:layout="@layout/fragment_navigation_drawer"
        android:name="com.example.zee.galvanisemobile.navigation.NavigationDrawerFragment"
        tools:layout="@layout/fragment_navigation_drawer" />

</android.support.v4.widget.DrawerLayout>
