<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.zee.galvanisemobile.cart.CartActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <LinearLayout
        android:id="@+id/tableNumberLayout"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="Your Table Number Is"
            android:gravity="center"
            android:paddingTop="30dp"
            android:textColor="#fff"
            android:background="@color/accentColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tableNumber"
            android:textColor="#fff"
            android:textSize="50dp"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:background="@color/accentColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:text="( Re-Scan )"
            android:gravity="center"
            android:textColor="#fff"
            android:paddingBottom="10dp"
            android:background="@color/accentColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick_rescanQRCode"/>

    </LinearLayout>

    <!-- Shopping Cart Info !-->
    <LinearLayout
        android:orientation="horizontal"
        android:background="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:padding="10dp"
            android:id="@+id/nav_list_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_category_shopping"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/asphaltColor"
                android:text="@string/empty_cart"
                android:id="@+id/cart_quantity" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/asphaltColor"
                android:text="@string/empty_payable"
                android:id="@+id/total_payable" />

        </LinearLayout>

    </LinearLayout>

    <!-- Discount Info !-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="No Discount Applicable"
        android:textColor="#fff"
        android:background="@color/primaryColor"
        android:id="@+id/discounted_payable" />

    <!-- Display Placeholder Image And A "GO TO MENU" Button When Cart Is Empty !-->
    <LinearLayout
        android:id="@+id/emptyCart"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:text="Your Order is Empty"
            android:gravity="center"
            android:textSize="24dp"
            android:paddingTop="50dp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="Why not add some awesome food? :)"
            android:gravity="center"
            android:textSize="16dp"
            android:paddingTop="10dp"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Go To Menu"
            android:background="@color/primaryColor"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:id="@+id/goToFoodMenu"
            android:onClick="onClick_goFoodMenu"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/ic_poker_cup" />

    </LinearLayout>

    <!-- Recycler View (List of Order Items) !-->
    <fragment
        android:id="@+id/fragment_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:name="com.example.zee.galvanisemobile.cart.CartFragment"
        tools:layout="@layout/fragment_cart" />

    <!-- Checkout Button !-->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkout_items"
        android:background="@color/primaryColor"
        android:onClick="onClick_checkout"
        android:id="@+id/checkout" />

</LinearLayout>
